--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 49,
    "id": "5cfe9b80-f2ec-481f-9db5-bb6247b1b472",
    "metadata": {},
    "outputs": [
@@ -152,7 +152,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Gas Lawnmower\n"
+      "Alarm Clock\n"
      ]
     }
    ],
@@ -161,14 +161,14 @@
     "\n",
     "x = int(input())\n",
     "\n",
-    "if x <= 40:\n",
-    "    print(\"Quiet Room\")\n",
-    "elif x <= 70:\n",
-    "    print(\"Alarm Clock\")\n",
-    "elif x <= 106:\n",
+    "if x >= 130:\n",
+    "    print(\"Jackhammer\")\n",
+    "elif x >= 106:\n",
     "    print(\"Gas Lawnmower\")\n",
-    "elif x <= 130:\n",
-    "    print(\"Jackhammer\")"
+    "elif x >= 70:\n",
+    "    print(\"Alarm Clock\")\n",
+    "else:\n",
+    "    print(\"Quiet Room\")"
    ]
   },
   {
@@ -712,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 54,
    "id": "cd8f1a7a-d9cf-4498-a677-e17d64d0eea0",
    "metadata": {},
    "outputs": [
@@ -722,7 +722,7 @@
        "4.5"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -730,10 +730,10 @@
    "source": [
     "#si-taxi\n",
     "def taxiPrice(distance): \n",
-    "    base = 4.00\n",
-    "    # number of full 140 kms traveled after first 140 kms\n",
-    "    kmcharge = distance // 140  \n",
-    "    return base + (kmcharge * 0.25)\n",
+    "    if distance < 140:\n",
+    "        return 4.00\n",
+    "    elif distance >= 140:\n",
+    "        return 4.00 + ((distance/140) * 0.25)\n",
     "\n",
     "taxiPrice(280)"
    ]
