--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 79,
    "id": "5cfe9b80-f2ec-481f-9db5-bb6247b1b472",
    "metadata": {},
    "outputs": [
@@ -152,7 +152,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Alarm Clock\n"
+      "Alarm Clock\n",
+      "Quiet Room\n"
      ]
     }
    ],
@@ -161,14 +162,16 @@
     "\n",
     "x = int(input())\n",
     "\n",
-    "if x >= 130:\n",
-    "    print(\"Jackhammer\")\n",
-    "elif x >= 106:\n",
-    "    print(\"Gas Lawnmower\")\n",
+    "if x < 40:\n",
+    "    print(\"Quiet Room\")\n",
+    "elif x >= 40:\n",
+    "    print(\"Alarm Clock\"), print(\"Quiet Room\")\n",
     "elif x >= 70:\n",
-    "    print(\"Alarm Clock\")\n",
+    "    print(\"Gas Lawnmower\"), print(\"Alarm Clock\")\n",
+    "elif x >= 106:\n",
+    "    print(\"Jackhammer\"), print(\"Gas Lawnmower\")\n",
     "else:\n",
-    "    print(\"Quiet Room\")"
+    "    print(\"Jackhammer\") "
    ]
   },
   {
@@ -712,17 +715,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 74,
    "id": "cd8f1a7a-d9cf-4498-a677-e17d64d0eea0",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "4.5"
+       "255.7857142857143"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -733,9 +736,9 @@
     "    if distance < 140:\n",
     "        return 4.00\n",
     "    elif distance >= 140:\n",
-    "        return 4.00 + ((distance/140) * 0.25)\n",
+    "        return 4.00 + 0.25*((distance * (1000/140)))\n",
     "\n",
-    "taxiPrice(280)"
+    "taxiPrice(141)"
    ]
   },
   {
