--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 82,
    "id": "5cfe9b80-f2ec-481f-9db5-bb6247b1b472",
    "metadata": {},
    "outputs": [
@@ -152,8 +152,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Alarm Clock\n",
-      "Quiet Room\n"
+      "The sound level matches an Alarm Clock.\n"
      ]
     }
    ],
@@ -162,16 +161,24 @@
     "\n",
     "x = int(input())\n",
     "\n",
-    "if x < 40:\n",
-    "    print(\"Quiet Room\")\n",
-    "elif x >= 40:\n",
-    "    print(\"Alarm Clock\"), print(\"Quiet Room\")\n",
-    "elif x >= 70:\n",
-    "    print(\"Gas Lawnmower\"), print(\"Alarm Clock\")\n",
-    "elif x >= 106:\n",
-    "    print(\"Jackhammer\"), print(\"Gas Lawnmower\")\n",
-    "else:\n",
-    "    print(\"Jackhammer\") "
+    "if x == 130:\n",
+    "    print(\"The sound level matches a Jackhammer.\")\n",
+    "elif x == 106:\n",
+    "    print(\"The sound level matches a Gas Lawnmower.\")\n",
+    "elif x == 70:\n",
+    "    print(\"The sound level matches an Alarm Clock.\")\n",
+    "elif x == 40:\n",
+    "    print(\"The sound level matches a Quiet Room.\")\n",
+    "elif x > 130:\n",
+    "    print(\"The sound level is louder than a Jackhammer.\")\n",
+    "elif x < 40:\n",
+    "    print(\"The sound level is quieter than a Quiet Room.\")\n",
+    "elif 106 < x < 130:\n",
+    "    print(\"The sound level is between a Gas Lawnmower and a Jackhammer.\")\n",
+    "elif 70 < x < 106:\n",
+    "    print(\"The sound level is between an Alarm Clock and a Gas Lawnmower.\")\n",
+    "elif 40 < x < 70:\n",
+    "    print(\"The sound level is between a Quiet Room and an Alarm Clock.\")\n"
    ]
   },
   {
@@ -715,30 +722,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 85,
    "id": "cd8f1a7a-d9cf-4498-a677-e17d64d0eea0",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "255.7857142857143"
-      ]
-     },
-     "execution_count": 74,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#si-taxi\n",
     "def taxiPrice(distance): \n",
-    "    if distance < 140:\n",
-    "        return 4.00\n",
-    "    elif distance >= 140:\n",
-    "        return 4.00 + 0.25*((distance * (1000/140)))\n",
-    "\n",
-    "taxiPrice(141)"
+    "    return 4.00 + 0.25 * (distance * 1000 / 140)"
    ]
   },
   {
